--- a/stages/services/includes/cicd/files/etc/docker/registry/config.yml
+++ b/stages/services/includes/cicd/files/etc/docker/registry/config.yml
@@ -6,7 +6,7 @@ storage:
   cache:
     blobdescriptor: inmemory
   filesystem:
-    rootdirectory: /var/storage/smallwastebox/registry-v3
+    rootdirectory: /var/storage/wastebox/tiredsysadmin.cc/registry-v3
   delete:
     enabled: true
 http:
