Enrolled matrix build

--- a/.woodpecker/all_early.yaml
+++ b/.woodpecker/all_early.yaml
@@ -5,62 +5,14 @@ when:
         - 'stages/early/*'
         - '.woodpecker/all_early.yaml'
     event: push
+matrix:
+  ROLE:
+    - production
+    - homeserver
+    - outpost
+    - printserver
 labels:
-  role: production
-steps:
-  build:
-    image: bash
-    commands:
-      - echo $GIT_SUDO | sudo -S make early
-    environment:
-      GIT_SUDO:
-        from_secret: git_sudo
-
----
-when:
-  - path:
-      include:
-        - 'stages/early/*'
-        - '.woodpecker/all_early.yaml'
-    event: push
-labels:
-  role: homeserver
-steps:
-  build:
-    image: bash
-    commands:
-      - echo $GIT_SUDO | sudo -S make early
-    environment:
-      GIT_SUDO:
-        from_secret: git_sudo
-
----
-when:
-  - path:
-      include:
-        - 'stages/early/*'
-        - '.woodpecker/all_early.yaml'
-    event: push
-labels:
-  role: outpost
-steps:
-  build:
-    image: bash
-    commands:
-      - echo $GIT_SUDO | sudo -S make early
-    environment:
-      GIT_SUDO:
-        from_secret: git_sudo
-
----
-when:
-  - path:
-      include:
-        - 'stages/early/*'
-        - '.woodpecker/all_early.yaml'
-    event: push
-labels:
-  role: printserver
+  role: ${ROLE}
 steps:
   build:
     image: bash
