--- a/.woodpecker/all_early.yaml
+++ b/.woodpecker/all_early.yaml
@@ -13,11 +13,16 @@ matrix:
     - printserver
 labels:
   role: ${ROLE}
+skip_clone: true
 steps:
+  clone:
+    image: bash
+    commands:
+      - git clone ${CI_REPO_CLONE_SSH_URL}
   build:
     image: bash
     commands:
-      - echo $GIT_SUDO | sudo -S make early
+      - cd ${CI_REPO_NAME} && echo $GIT_SUDO | sudo -S make early
     environment:
       GIT_SUDO:
         from_secret: git_sudo
