--- a/.woodpecker/all_early.yaml
+++ b/.woodpecker/all_early.yaml
@@ -18,7 +18,7 @@ steps:
   clone:
     image: bash
     commands:
-      - git clone ${CI_REPO_CLONE_SSH_URL}
+      - git clone --depth=1 ${CI_REPO_CLONE_SSH_URL}
   build:
     image: bash
     commands:
