Fixed users workflow

--- a/.woodpecker/all_users.yaml
+++ b/.woodpecker/all_users.yaml
@@ -2,8 +2,8 @@
 when:
   - path:
       include:
-        - 'stages/monitoring/*'
-        - '.woodpecker/all_monitoring.yaml'
+        - 'stages/users/**'
+        - '.woodpecker/all_users.yaml'
     event: push
 matrix:
   ROLE:
@@ -22,7 +22,7 @@ steps:
   build:
     image: bash
     commands:
-      - cd ${CI_REPO_NAME} && echo $GIT_SUDO | sudo -S make wtfd_package checks wtfd MACHINE_ROLE=${ROLE}
+      - cd ${CI_REPO_NAME} && echo $GIT_SUDO | sudo -S make users MACHINE_ROLE=${ROLE}
     environment:
       GIT_SUDO:
         from_secret: git_sudo
