Fixed monitoring workflow

--- a/.woodpecker/all_monitoring.yaml
+++ b/.woodpecker/all_monitoring.yaml
@@ -2,7 +2,7 @@
 when:
   - path:
       include:
-        - 'stages/monitoring/*'
+        - 'stages/monitoring/**'
         - '.woodpecker/all_monitoring.yaml'
     event: push
 matrix:
