Provisioning first files for real with IACD

--- a/stages/early/files/cfg/basic_files.yaml
+++ b/stages/early/files/cfg/basic_files.yaml
@@ -4,6 +4,8 @@ file:
   - name: "/home/rcmd/test1.txt"
     mode: "666"
     ownership: "rcmd:rcmd"
+    source: "stages/early/files/etc/dummy.txt"
   - name: "/home/rcmd/test2.txt"
     mode: "400"
     ownership: "rcmd:rcmd"
+    source: "stages/early/files/etc/dummy.txt"
