Updated basic files

--- a/stages/early/files/cfg/basic_files.yaml
+++ b/stages/early/files/cfg/basic_files.yaml
@@ -1,2 +1,8 @@
 ---
-# Test
+kind: "iac.rcmd.space/file"
+id: "testfiles"
+file:
+  - name: "/home/rcmd/test1.txt"
+    mode: "644"
+    ownership: "rcmd:rcmd"
+    source: "stages/early/files/etc/dummy.txt"
