Does it need a double start to trigger recursive changes?

--- a/.woodpecker/all_early.yaml
+++ b/.woodpecker/all_early.yaml
@@ -2,7 +2,7 @@
 when:
   - path:
       include:
-        - 'stages/early/*'
+        - 'stages/early/**'
         - '.woodpecker/all_early.yaml'
     event: push
 matrix:
