Installing tpl on all machines

--- a/stages/early/files/cfg/core_binaries_arm64.yaml
+++ b/stages/early/files/cfg/core_binaries_arm64.yaml
@@ -6,3 +6,7 @@ download:
     mode: "755"
     ownership: "root:root"
     destination: "/usr/local/bin/yq"
+  - url: "https://repo.rcmd.space/binaries/tpl/tpl_arm64"
+    mode: "755"
+    ownership: "root:root"
+    destination: "/usr/local/bin/tpl"
